# parser-word-json

./: AI_prompt_enhancement_parser.md  CHANGELOG.md  Dockerfile  README.md  commit_message.txt  docker-compose.yml  new-tasks.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
parser/: cli.py  extractor.py  schema.py  server.py  utils.py
samples/: create_edge_case_samples.py  create_sample_docx.py  create_warning_sample_docx.py  sample1.docx  sample1.json  sample2.docx  sample_alt_markers.docx  sample_google_docs.docx  sample_missing_alternatives.docx  sample_new_format.docx  sample_new_format.json  sample_no_exercises.docx  sample_no_theory.docx
tests/: test_extractor.py  test_new_format.py
